# mail-agent

./: .gitignore  AGENTS.md  BODY_DEBUG_GUIDE.md  BUILD.md  CHANGELOG_EXPANDED_VIEW.md  CHANGELOG_NOTIFICATION_FIX.md  DEADLOCK_FIX_COMPLETE.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  JUNIE.md  QUICK_GUIDE_EXPANDED_VIEW.md  README.md  READY_TO_TEST.md  SNOOZE_DEBUG_ANALYSIS.md  SNOOZE_FIX.md  SNOOZE_FIX_FINAL.md  SNOOZE_FIX_FINAL_V2.md  SNOOZE_FIX_v2.md  START.bat  TESTING_BODY_DISPLAY.md  TEST_CHECKLIST_EXPANDED_VIEW.md  package.json  test-body.ps1
.codex/: auth.json  config.toml  history.jsonl  version.json
.specify/memory/: constitution.md
docs/: CHECK_NOW_FIX.md  DEADLOCK_RESOLVED.md  EXPANDED_VIEW.md  NOTIFICATION_IMPROVEMENTS.md  USER_GUIDE_EXPANDED_VIEW.md  bugfixes.md  development.md  gmail.md  index.md  setup.md  tray.md
frontend/: .gitignore  README.md  angular.json  main.js  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.routes.ts  app.spec.ts  app.ts
frontend_legacy_dom/: index.html  main.js  styles.css
scripts/: build.js  check-implementation.js  debug.js  dev.js  setup.ps1  setup.sh
specs/001-gmail-oauth-notifier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/alert/: chunk-GYULEV7C.js  chunk-N6X5JSQQ.js  index.html  main-E2DPQZGI.js  main-MIL3YJN6.js  main-Y77BQKX6.js  styles-ME52KBUI.css
src-tauri/capabilities/: app.json
src-tauri/src/: config.rs  gmail.rs  main.rs  notifier.rs  oauth.rs
(+15 files in other folders)
