[package]
name = "gmail_tray_notifier"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
keyring = "2"
log = "0.4"
once_cell = "1"
oauth2 = { version = "4", default-features = false, features = ["reqwest"] }
# Use native OS certificate store for TLS to avoid corporate proxy cert issues
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["chrono"] }
thiserror = "1"
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_repr = "0.1"
urlencoding = "2"
parking_lot = "0.12"
lru = "0.12"
base64 = "0.22"
tauri-plugin-autostart = "2"
webbrowser = "0.8"
directories = "5"

[features]
default = []
